--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>멋진 투두리스트</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>대충만든거</title>
   <style>
     body {
       background: #f0f4f8;
