--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>대충</h1>
+    <h1>todo리스트</h1>
     <div class="input-area">
       <input type="text" id="todo-input" placeholder="할 일을 입력하세요" />
       <button id="add-btn">추가</button>
